tests/pairs/ill-typed/bad-pairs-2.stella
language core;
extend with #pairs;

fn swap(p : {Nat, Nat}) -> {Nat, Nat} {
  return {p.2, p.3}
}

fn main(x : Nat) -> Nat {
  return swap(swap({0, x})).1
}
